@@ -19,7 +19,7 @@
 #ifndef _SETTINGS_H_
 #define _SETTINSG_H_
 
-/* Enable the debugger, this only seems to work in win32 for now. */
+/* Enable the debugger, under linux/freebsd dosbox must be started in an xterm under X */
 #define C_DEBUG 0
 #define C_HEAVY_DEBUG 0
 
